2010-07-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (manual_print): move `if' outside of the `for' loop

2010-07-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIB_TYPE): remove obsolete unused code

2010-07-21  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CANONICAL_HOST_CPU): sync with ffcall to use
	CL_SET_CPU_ABI, CL_CACHE_EGREP_CPP, and substitute host_cpu_abi
	* makemake.in (cpu): use @host_cpu_abi@

2010-07-20  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA) [*bsd]: when ENOTSUP is not defined,
	use EOPNOTSUPP (e.g., on UNIX_OPENBSD)

2010-07-16  Sam Steingold  <sds@gnu.org>

	* version.sh: 4.49+ (2010-07-17)

2010-07-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (cpu) [mips]: by default gcc runs in 32-bit mode,
	so use the same heuristic as sparc: when "uname -m" is mips64,
	set cpu to mips64 only if `gcc -print-multi-os-directory` ends in 64

2010-07-12  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp (save-problem): use WRITE instead of
	FORMAT to avoid creating intermediate LONG-FLOATs

2010-07-12  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): use `test' instead of `[]'
	Reported by Arseny Slobodyuk <ampy@ich.dvo.ru>

2010-07-09  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (QueryInformationFile_t) [WIN32]: fix calling convention.
	NT API is uses __stdcall not __cdecl
	(handle_pathname): pass correct buffer size to NtQueryInformationFile

2010-07-09  Aleksej Saushev  <asau@inbox.ru>

	* clisp-link.in: use ${DESTDIR} to support staged module installation

2010-07-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCC_PICFLAG, XCC_CREATESHARED): set using libtool,
	like we already do with EXPORT_DYNAMIC_FLAG_SPEC

2010-07-09  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-call-out, pari-cgetg): no need
	for (:LANGUAGE :STDC) since we already use DEFAULT-FOREIGN-LANGUAGE
	(extract0, extract1, pari-mantissa, pari-set-component)