@@ -1,6 +1,7 @@
 2010-07-27  Sam Steingold  <sds@gnu.org>
 
 	* makemake.in (manual_print): move `if' outside of the `for' loop
+	($IMPNOTES_FILES, $DOC, $TOP_DOC): use link_dep
 
 2010-07-23  Sam Steingold  <sds@gnu.org>
 
